Align elements correctly

--- a/sketches/styles/nps.css
+++ b/sketches/styles/nps.css
@@ -1,7 +1,21 @@
 /*! normalize.css v3.0.2 | MIT License | git.io/normalize */
 
+/*
+   This makes sure that the padding and border
+   are included in the total width and height of the elements.
+ */
+
+* {
+    box-sizing: border-box;
+}
+
 body {
-	background-color: white;
+	background-color: #F0F0F0;
+    height: 100%;
+    width: 100%;
+    padding: 0;
+    margin: 0;
+    overflow: hidden;
 }
 
 .nps-bubble {
@@ -28,6 +42,10 @@ body {
 	margin-right: 7px;
 }
 
+.nps-dd-first-row :last-child {
+    margin-right: 0 !important;
+}
+
 .nps-dd-second-row {
 	margin: 10px 0 0 16px;
 }
@@ -35,4 +53,21 @@ body {
 .nps-dd-second-row .nps-bubble {
 	color: red;
 	margin-left: 7px;
+}
+
+.nps-dd-second-row :last-child {
+    margin-right: 0 !important;
+}
+
+.center {
+    position: relative;
+    display: block;
+    top: 50%;
+    margin-top: -1000px;
+    height: 2000px;
+    text-align: center;
+    line-height: 2000px;
+}
+.center-wrap {
+    line-height: 0;
 }
